diff index.html

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@ CTYPE HTML>
 					</a>
 				</footer>-->
 
-				<h2><a href="./Storage/_build/html/index.html">Storage’s documentation</a></h2>
+				<h2><a href="TERUTARO.github.io/LINUX/index.html">Storage’s documentation</a></h2>
 			
 
 				<h2><a href="./AWS/_build/html/index.html">AWS’s documentation</a></h2>
 
-				<h2><a href="./LINUX/_build/html/index.html">LINUX’s documentation</a></h2>
+				<h2><a href="TERUTARO.github.io/LINUX/index.html">LINUX’s documentation</a></h2>
 
 			        <h2><a href="./Sphinx/_build/html/index.html">Sphinx documentation</a></h2>
 
