diff index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ CTYPE HTML>
 
 				<h2><a href="./AWS/_build/html/index.html">AWS’s documentation</a></h2>
 
-				<h2><a href="./LINUX/index.html">LINUX’s documentation</a></h2>
+				<h2><a href="http://TERUTARO.github.io/LINUX/index.html">LINUX’s documentation</a></h2>
 
 			        <h2><a href="./Sphinx/_build/html/index.html">Sphinx documentation</a></h2>
 
