--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ CTYPE HTML>
 
 			        <h2><a href="http://terutaro.github.io/Sphinx/index.html">Sphinx documentation</a></h2>
 
-			        <h2><a href="./Secure/_build/html/index.html">Secure documentation</a></h2>
+			        <h2><a href="http://terutaro.github.io/Secure/index.html">Secure documentation</a></h2>
 			        
 				<h2><a href="./Javascript/_build/html/index.html">Javascript documentation</a></h2>
 
