--- a/DATABASE/MySQL-01.html
+++ b/DATABASE/MySQL-01.html
@@ -1,3 +1,8 @@
+<!DOCTYPE html>
+<html>
+ <head><link rel="stylesheet" type="text/css" href="style.css"></head>
+ 
+<body>
 <h1 id="databaseの役割について">DataBaseの役割について</h1>
 <p>時間の都合上、パワポを埋め込めることができませんでした。。。</p>
 <h1 id="mysqlをインストールしよう">MySQLをインストールしよう！</h1>
@@ -325,3 +330,4 @@ mysqld  Ver 5.7.22 for Linux on x86_64 (MySQL Community Server (GPL))
 <p>chkconfig mysql on</p>
 <p>※chkconfig の「on」オプションでは、ランレベルとしては全て有効状態です。</p>
 <p>「ランレベル」がわからない人はググってみよう。</p>
+</body>
