--- a/DATABASE/MySQL-02.html
+++ b/DATABASE/MySQL-02.html
@@ -1,3 +1,8 @@
+<!DOCTYPE html>
+<html>
+ <head><link rel="stylesheet" type="text/css" href="style.css"></head>
+ 
+<body>
 <h1 id="my.cnfの設定">my.cnfの設定</h1>
 <p>mysqlの設定ファイルは「my.cnf」というファイルです。 こちらでログの設定等を指定してあげるのですね。 主にチューニングを行うために編集することが多いです。</p>
 <p>例1) ネットワーク関連のチューニングしたい</p>
@@ -307,3 +312,4 @@ mysql&gt;
 <pre class="shell-session"><code>select * from user;</code></pre>
 <p>データが表示されたら成功です！</p>
 <p>流れがわかったところで、自力で「id：0002、name：user02」をインサート／確認してみよう！</p>
+</body>
