--- a/DATABASE/MySQL-02.html
+++ b/DATABASE/MySQL-02.html
@@ -312,4 +312,7 @@ mysql&gt;
 <pre class="shell-session"><code>select * from user;</code></pre>
 <p>データが表示されたら成功です！</p>
 <p>流れがわかったところで、自力で「id：0002、name：user02」をインサート／確認してみよう！</p>
+ 
+ 
+<p><a href="MySQL-02.html">NEXT</a></p>
 </body>
