--- a/DATABASE/MySQL-02.html
+++ b/DATABASE/MySQL-02.html
@@ -314,5 +314,5 @@ mysql&gt;
 <p>流れがわかったところで、自力で「id：0002、name：user02」をインサート／確認してみよう！</p>
  
  
-<p><a href="MySQL-02.html">NEXT</a></p>
+<p><a href="MySQL-01.html">BACK</a></p>
 </body>
