--- a/DATABASE/MySQL-01.html
+++ b/DATABASE/MySQL-01.html
@@ -330,4 +330,7 @@ mysqld  Ver 5.7.22 for Linux on x86_64 (MySQL Community Server (GPL))
 <p>chkconfig mysql on</p>
 <p>※chkconfig の「on」オプションでは、ランレベルとしては全て有効状態です。</p>
 <p>「ランレベル」がわからない人はググってみよう。</p>
+ 
+ 
+<p><a href="MySQL-02.html">NEXT</a></p>
 </body>
