--- a/DATABASE/MySQL-01_Preparation.html
+++ b/DATABASE/MySQL-01_Preparation.html
@@ -291,4 +291,7 @@ mysql80-community-source                                    MySQL 8 無効
 
 </code></pre>
 <p>これで準備完了です！</p>
-</body>
+
+ 
+ <p><a href="MySQL-02_InstallMySQL.html">NEXT</a></p>
+ </body>
