--- a/DATABASE/MySQL-02_InstallMySQL.html
+++ b/DATABASE/MySQL-02_InstallMySQL.html
@@ -62,5 +62,6 @@
 <p>chkconfig mysql on ※chkconfig の「on」オプションでは、ランレベルとしては全て有効状態です。</p>
 <p>「ランレベル」がわからない人はググってみよう。</p>
 
+ <p><a href="MySQL-03_SetMycnf.html">NEXT</a></p>
 
 </body>
