--- a/DATABASE/MySQL-03_SetMycnf.html
+++ b/DATABASE/MySQL-03_SetMycnf.html
@@ -157,5 +157,6 @@ systemctl restart mysqld
 systemctl status mysqld</code></pre>
 <p>activeだったらOKですね！</p>
 
+ <p><a href="MySQL-04_UseDB.html">NEXT</a></p>
 
 </body>
