--- a/DATABASE/MySQL-05.html
+++ b/DATABASE/MySQL-05.html
@@ -187,7 +187,29 @@ http://www.atmarkit.co.jp/ait/articles/1703/01/news181.html</code></pre>
 </tr>
 </tbody>
 </table>
-<p>[表2-3 出荷テーブル]</p>
+<p>[表2-3 商品生産テーブル]</p>
+<table>
+<thead>
+<tr class="header">
+<th align="center">商品名</th>
+<th align="center">生産日</th>
+<th align="center">生産数</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="center">ボルト</td>
+<td align="center">20180618</td>
+<td align="center">500</td>
+</tr>
+<tr class="even">
+<td align="center">ナット</td>
+<td align="center">20180618</td>
+<td align="center">100</td>
+</tr>
+</tbody>
+</table>
+<p>[表2-4 出荷テーブル]</p>
 <table>
 <thead>
 <tr class="header">
@@ -277,7 +299,29 @@ http://www.atmarkit.co.jp/ait/articles/1703/01/news181.html</code></pre>
 </tr>
 </tbody>
 </table>
-<p>[表3-4 出荷テーブル]</p>
+<p>[表3-4 商品生産テーブル]</p>
+<table>
+<thead>
+<tr class="header">
+<th align="center">商品名</th>
+<th align="center">生産日</th>
+<th align="center">生産数</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="center">ボルト</td>
+<td align="center">20180618</td>
+<td align="center">500</td>
+</tr>
+<tr class="even">
+<td align="center">ナット</td>
+<td align="center">20180618</td>
+<td align="center">100</td>
+</tr>
+</tbody>
+</table>
+<p>[表3-5 出荷テーブル]</p>
 <table>
 <thead>
 <tr class="header">
