--- a/Ansible/Ansible-01.html
+++ b/Ansible/Ansible-01.html
@@ -31,13 +31,16 @@
 </tbody>
 </table>
 <p>以下にそれぞれれの要素について補足する。</p>
-<h2 id="構成管理">###構成管理</h2>
+<h3 id="構成管理">構成管理</h3>
+<hr />
 <p>構成管理はシステム構成の最新状況 (現状) を正確に把握するという、運用上、最も基礎的な管理である。 システムを構成するすべての要素が管理対象となるため、この情報の確かさが、安定的なシステム運用の要となる。</p>
 <p>昨今の例ではGitなどもこの構成管理に該当する。</p>
-<h2 id="devops">###DevOps</h2>
+<h3 id="devops">DevOps</h3>
+<hr />
 <p>開発 (Development) と運用 (Operations) を組み合わせた語であり、開発担当者と運用担当者が連携して協力する（さらに両担当者の境目もあいまいにする）開発手法をさす。</p>
 <p>2015年ごろからプッシュされるようになった印象がある。</p>
-<h2 id="infrastructure-as-code-1">###Infrastructure as code</h2>
+<h3 id="infrastructure-as-code-1">Infrastructure as code</h3>
+<hr />
 <p>設計手順やパラメータを再利用性の高いなんらかのコードにしよう！という思想。 同時に構成管理も兼ねることが多い。</p>
 <p>メリットとしては以下が挙げられる。 ・　ヒューマンエラーの削減 ・　工数削減</p>
 <p>デメリットとしては以下が挙げられる。 ・　プロビジョニングツールに対する学習コストがかかる。</p>
