--- a/Ansible/Ansible-03.html
+++ b/Ansible/Ansible-03.html
@@ -1,1 +1,102 @@
 
+<p>#ハンズオン</p>
+<p>##環境情報
+以下の環境を2人1グループで利用してください。
+なお、AnsibleサーバはRedHatですので、SSHで接続、Windowsサーバに関してはRDPで接続をお願いします。</p>
+<p><em>GROUP1</em>
+|サーバ種別|IP|ユーザ名|パスワード|
+| :--: | :--: | :--: | :--: |<br>| RedHat  | 18.236.251.169 | ansible | Pa$$w0rd |
+| Windows | 34.216.135.59  | Administrator | lNSaOASSv8X=AkDM?H3DVNaLh4q3=Ry9 |</p>
+<p><em>GROUP2</em>
+|サーバ種別|IP|ユーザ名|パスワード|
+| :--: | :--: | :--: | :--: |<br>| RedHat  | 54.202.228.226 | ansible | Pa$$w0rd |
+| Windows | 50.112.19.254 | Administrator | MGn;6Ynbqah.wb!8=94tGj8s?zfGSbCa |</p>
+<p><em>GROUP3</em>
+|サーバ種別|IP|ユーザ名|パスワード|
+| :--: | :--: | :--: | :--: |<br>| RedHat  | 54.184.219.10 | ansible | Pa$$w0rd |
+| Windows | 52.13.153.18  | Administrator | j=V(J(Vfkg4RGrc$UD3mTUM%pJS6cwo% |</p>
+<p><em>GROUP4</em>
+|サーバ種別|IP|ユーザ名|パスワード|
+| :--: | :--: | :--: | :--: |<br>| RedHat  | 52.25.159.75  | ansible | Pa$$w0rd |
+| Windows | 52.32.86.50   | Administrator | %timdn=qGfWlUf5aL*jJ.HwId3kw2g7g |</p>
+<p><em>GROUP5</em>
+|サーバ種別|IP|ユーザ名|パスワード|
+| :--: | :--: | :--: | :--: |<br>| RedHat  | 34.214.121.216 | ansible | Pa$$w0rd |
+| Windows | 54.70.228.43   | Administrator | m8&amp;n3!dAJ-faNQ;i(X2OK(aCl7O-bgRa |</p>
+<p>##手順</p>
+<h2 id="-ansible-"><em>Ansibleサーバへの接続</em></h2>
+<p>1.AnsibleサーバへSSH接続し、ルートユーザに昇格する。</p>
+<p>2.カレントディレクトリを以下に移動</p>
+<pre><code>/pot
+</code></pre><p>3.以下のコマンドでAnsibleバージョンの確認を実施しましょう。</p>
+<pre><code>ansible --version
+</code></pre><h2 id="-"><em>インベントリファイルを作ろう！</em></h2>
+<p>1.以下のコマンドを実行</p>
+<pre><code>vi hosts
+
+〜以下内容〜
+
+[windows]
+WindowsServerのIP
+
+[windows:vars]
+ansible_ssh_user=Administrator
+ansible_ssh_pass=WindowsServerのパスワード
+ansible_ssh_port=5986
+ansible_connection=winrm
+ansible_winrm_server_cert_validation=ignore
+
+〜ここまで〜
+
+内容追加したら、「wq」して保存！
+</code></pre><p>2.以下のコマンドを実行！</p>
+<pre><code>ansible windows -i hosts -m win_ping -vvvv
+</code></pre><h2 id="-playbook-"><em>PlayBookをつくろう！</em></h2>
+<p>1.以下のコマンドを実行</p>
+<pre><code>vi ad_add.yml
+
+〜以下内容〜
+
+- hosts: windows
+  gather_facts: no
+  vars:
+    ad_opts:
+      DomainName: hogehoge.localdomain
+      DomainMode: Win2012R2
+      ForestMode: Win2012R2
+      SafeModeAdministratorPassword: HOGEhoge1
+      DatabasePath: &#39;C:\ADDS\NTDS&#39;
+      LogPath: &#39;C:\ADDS\NTDS&#39;
+      SysvolPath: &#39;C:\ADDS\SYSVOL&#39;
+  tasks:
+    - win_feature:
+        name: AD-Domain-Services
+        include_management_tools: yes
+    - raw: &#39;netsh advfirewall firewall add rule Profile=domain name=&quot;Allow WinRM HTTPS&quot; d=in localport=5986 protocol=TCP action=allow&#39;
+    - local_action: template src=Install-ADDSForest.ps1.j2 dest=./Install-ADDSForest.ps1
+    - script: &#39;Install-ADDSForest.ps1&#39;
+
+〜ここまで〜
+
+内容追加したら、「wq」して保存！
+</code></pre><p>2.以下のコマンドを実行</p>
+<pre><code>vi Install-ADDSForest.ps1.j2
+
+〜以下内容〜
+
+Install-ADDSForest -Force
+{%- for key, value in ad_opts.iteritems() -%}
+{%- if key == &#39;SafeModeAdministratorPassword&#39; %}
+ -{{ key }} (ConvertTo-SecureString -AsPlainText -Force -String &quot;{{ value }}&quot;)
+{%- else %}
+ -{{ key }} &quot;{{ value }}&quot;
+{%- endif -%}
+{%- endfor -%}
+
+〜ここまで〜
+
+内容追加したら、「wq」して保存！
+</code></pre><p>3.以下のコマンドを実行！</p>
+<pre><code> ansible-playbook -i hosts ad_add.yml
+</code></pre><p>4.Windowsサーバに接続してADになってるか確認！おわり！</p>
+
