--- a/Javascript/Javascript-01.html
+++ b/Javascript/Javascript-01.html
@@ -30,6 +30,7 @@
 <p>「クライアントデバイス上で」複雑な処理ができることがJavascriptが強力である利点である。</p>
 <h2 id="node.js">Node.js</h2>
 <p>Node.jsとは、サーバーサイドのJavaScript 先ほどJavaScriptはブラウザサイドの言語だというお話をしましたが、新たにCommonJSという仕様が出来たお陰で、サーバーサイドでもJavaScriptを使用することが出来るようになった。</p>
-<p>余談だが、勉強会を継続してやろうと思っていた時期があったが、業務負荷に耐えられず、挫折した経緯が筆者にはあｗる。</p>
+<p>余談だが、勉強会を継続してやろうと思っていた時期があったが、業務負荷に耐えられず、挫折した経緯が筆者にはある。</p>
+<p><a href="Javascript-02.html">NEXT</a></p>
 </body>
 </html>
