--- a/Javascript/Javascript-01.html
+++ b/Javascript/Javascript-01.html
@@ -31,6 +31,6 @@
 <h2 id="node.js">Node.js</h2>
 <p>Node.jsとは、サーバーサイドのJavaScript 先ほどJavaScriptはブラウザサイドの言語だというお話をしましたが、新たにCommonJSという仕様が出来たお陰で、サーバーサイドでもJavaScriptを使用することが出来るようになった。</p>
 <p>余談だが、勉強会を継続してやろうと思っていた時期があったが、業務負荷に耐えられず、挫折した経緯が筆者にはある。</p>
-<p><a href="./Javascript-02.html">NEXT</a></p>
+<p><a href="Javascript-02.html">NEXT</a></p>
 </body>
 </html>
